--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 :root{
-    --font-family: 'Rubik', sans-serif;
+    --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+  "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-size: 16px;
 
     --black: #030712;
