--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,13 @@ body.stop-scrolling{
     overflow: hidden;
 }
 .page{
-    flex: 1 0 auto;
+    min-height: 100%;
     position: relative;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+main{
+    flex: 1 1 auto;
 }
 footer{
     flex: 0 0 auto;
